<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LayoutRGColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_info1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_titulo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_elecciones"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rb_eleccion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb_color1" />

            <RadioButton
                android:id="@+id/rb_eleccion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_color2" />

            <RadioButton
                android:id="@+id/rb_eleccion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_color3" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutCBEstilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_titulo2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cb_estilo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/cb_estilo1" />

        <CheckBox
            android:id="@+id/cb_estilo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/cb_estilo2" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_Info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/txt_info"
        android:textAlignment="center"
        android:textColor="@color/txt_info"
        android:textSize="34sp" />

    <LinearLayout
        android:id="@+id/LayoutSwitches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_eleccion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/sw_cambio1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_eleccion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:checked="true"
            android:text="@string/sw_cambio2"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>